ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-controller
  namespace: sonarqube
spec:
  ingressClassName: nginx
  rules:
    - host: mint.os
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: sonarqube
                port:
                  number: 9000
